# hippodrome

RoadRunner/: msetup
atomicity_specs/: avrora.txt  batik.txt  elevator.txt  hedc.txt  luindex.txt  lusearch.txt  moldyn.txt  montecarlo.txt  philo.txt  pmd.txt  raytracer.txt  sor.txt  sunflow.txt  tsp.txt  xalan.txt
benchmarks/avrora/: TEST
benchmarks/batik/: TEST
benchmarks/crypt/: TEST
benchmarks/elevator/: .classpath  README  TEST  build.xml
benchmarks/fop/: TEST
benchmarks/hedc/: .classpath  .project  TEST  build.xml
benchmarks/lufact/: TEST
benchmarks/luindex/: TEST
benchmarks/lusearch/: TEST
benchmarks/moldyn/: TEST
benchmarks/montecarlo/: TEST
benchmarks/philo/: .project  README  TEST  build.xml  full_trace.rr  grammar.txt  map.txt  trace.std  trace.txt
benchmarks/pmd/: TEST
benchmarks/raytracer/: TEST
benchmarks/series/: TEST
benchmarks/sor/: .classpath  .project  README  TEST  build.xml
benchmarks/sparsematmult/: TEST
nscc/: hippodrome  transform_grammar  transform_grammar.pbs  transform_grammar_non_optimized
rapid/: .gitignore
scripts/: .gitignore  CMakeLists.txt  add_atom_spec.py  atom_spec.py  common.py  compress_trace.py  gen_trace.py  optimize_grammar.py  transform_grammar.cpp  transform_grammar.py  transform_grammar_non_optimized.cpp  util.py
src/: .gitignore  Makefile  engine.h  engine_backup.h  event.h  grammar.h  graph.h  hippodrome.cpp  parser.h  transaction.h  util.h
src/optimized/: CMakeLists.txt  Makefile  engine.h  event.h  grammar.h  graph.h  transaction.h  util.h
ziptrack/: .gitignore
(+1180 files in other folders)
